removing z-index value on fixed button

--- a/resources/assets/scss/partials/inputs/_buttons.scss
+++ b/resources/assets/scss/partials/inputs/_buttons.scss
@@ -213,6 +213,6 @@ a.btn {
 }
 
 .pre-fixed-js {
-  z-index: 3;
+  /* z-index: 3; */
 }
 
